--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "tree-rs"
+name = "treers"
 version = "0.1.0"
-authors = ["Stacks-Mamba <stexor12@gmail.com>"]
+authors = ["stackswithans <stexor12@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
